// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JWS createJWS can canonicalize a JSON payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.eyJhIjoiYSIsInoiOiJ6In0.FiH0l1yEU2PmMQnD17WhsqwaV9oyFsOkm-U_natKFqeo4OTA7OYheYmlRy1OpNYbtYhDyZj0w1NfCpgsgDMGjw"`;

exports[`JWS createJWS works with JSON payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.eyJzb21lIjoiZGF0YSJ9.dblNz-7BVLknOFIBPmt5VTG0MDls_Q69WI8OfQuqNdUp4y50-b8Ubn0xujm1ijfmfqRunpks5TyWqgMsQkR_GQ"`;

exports[`JWS createJWS works with base64url payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.A_3Vet7D1DjqI3_kazPuHgFu2mtYXD4n6mZobC6lNYR5.n5ZZQZe1J7e76TGTLBpQO2R22JFoHDBi5ScfoxHz__Qy7Q6r3R11GdXmY_0ntFx6nC9QbDD19y8tTDMLUM4DAw"`;

exports[`createJWT() ES256K creates a JWT with correct format 1`] = `
Object {
  "data": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiaXNzIjoiZGlkOmV0aHI6MHhmM2JlYWMzMGM0OThkOWUyNjg2NWYzNGZjYWE1N2RiYjkzNWIwZDc0In0",
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "tU96omPNxCfQoEADOpLywXUDCMjKXOfTaG61EZwmfvHJrDFQhNbSDzCP2Pe7WdXySosTCuI1T-IQ6SddcWuj_A",
}
`;

exports[`createJWT() ES256K creates a JWT with correct legacy format 1`] = `
Object {
  "data": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiaXNzIjoiMHhmM2JlYWMzMGM0OThkOWUyNjg2NWYzNGZjYWE1N2RiYjkzNWIwZDc0In0",
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "Ma6o2byDEFmLxmqxJCOXgjAPZftSglFAzzKzv-3kBUkquDPWZyVYK0-vVhH-SbyasahIuHZCDGl4jQrW7hFsAw",
}
`;

exports[`createJWT() Ed25519 creates a JWT with correct format 1`] = `
Object {
  "data": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFZDI1NTE5In0.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiaXNzIjoiZGlkOm5hY2w6QnZyQjhpSkF6XzFqZnExbVJ4aUVLZnI5cWNuTGZxNURPR3JCZjJFUlVIVSJ9",
  "header": Object {
    "alg": "Ed25519",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:nacl:BvrB8iJAz_1jfq1mRxiEKfr9qcnLfq5DOGrBf2ERUHU",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "ZoPf01SxW2n5zngunI942FpviEMP6jBZZb9NJ27M_K7AcmjPeeLH8bm2lv0INmJ2u98JVSzELF8YLWQvPYB1Bw",
}
`;

exports[`verifyJWT() accepts a valid audience 1`] = `
Object {
  "aud": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() accepts a valid audience using callback_url 1`] = `
Object {
  "aud": "http://pututu.uport.me/unique",
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() accepts multiple audiences 1`] = `
Object {
  "aud": Array [
    "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
    "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
  ],
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() handles ES256K algorithm with blockchainAccountId - github #14, #155 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() handles ES256K algorithm with ethereum address - github #14 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() handles ES256K-R algorithm 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() handles ES256K-R algorithm with publicKeyHex address 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() pregenerated JWT verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;

exports[`verifyJWT() pregenerated JWT with legacy resolver verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:ethr:0x90e45d75bd1246e0924872018647dba996a8e7b9",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;
